--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "elysia-filesystemrouter",
+  "name": "@hambergerpls/elysia-filesystemrouter",
   "module": "index.ts",
   "type": "module",
   "version": "0.1.0",
@@ -8,7 +8,7 @@
     "@changesets/cli": "^2.27.1",
     "@changesets/get-github-info": "^0.6.0",
     "@types/bun": "^1.0.4",
-    "elysia-filesystemrouter": "link:elysia-filesystemrouter"
+    "@hambergerpls/elysia-filesystemrouter": "link:@hambergerpls/elysia-filesystemrouter"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -18,6 +18,6 @@
   },
   "scripts": {
     "version": "changeset version",
-    "release": "changeset tag"
+    "release": "changeset tag && changeset publish"
   }
 }
