--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   },
   "scripts": {
     "version": "changeset version",
-    "release": "changeset tag && changeset publish"
+    "release": "changeset tag && changeset publish --access=public"
   }
 }
