ci(package.json): add --access=public to release script

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,17 @@ jobs:
       - name: Install Dependencies
         run: bun install
 
+      - name: Creating .npmrc
+        run: |
+          cat << EOF > "$HOME/.npmrc"
+            //registry.npmjs.org/:_authToken=$NPM_TOKEN
+            registry=https://registry.npmjs.org/
+            always-auth=true
+            access=public
+          EOF
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
       - name: Create Release Pull Request
         id: changesets
         uses: changesets/action@v1
