--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install Dependencies
         run: bun install
 
+      - name: Run tests
+        run: bun test
+
       - name: Create Release Pull Request
         id: changesets
         uses: changesets/action@v1
